--- a/EpiAlloyPowerBI/Views/PowerBIBlock/Index.cshtml
+++ b/EpiAlloyPowerBI/Views/PowerBIBlock/Index.cshtml
@@ -1,10 +1,6 @@
 ﻿
 @model EpiAlloyPowerBI.Models.ViewModels.EmbedConfig
 
-@{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
 
 <script src="https://npmcdn.com/es6-promise@3.2.1"></script>
 <script src="~/scripts/powerbi.js"></script>
@@ -24,45 +20,10 @@
 }
 
 <h2>Embedded Report</h2>
-<div>
-    The following report is the first report found in the given group, or the reportId defined in Web.config. Feel free to change the code to match your needs.<br/><br/>
-    @using (Html.BeginForm())
-    {
-        <div>
-            <input type="checkbox" id="RLS" disabled>
-            <label for="RLS">View as a different user</label>
-        </div>
-        <div id="noRLSdiv">
-            <h8>This checkbox is disabled because the current report does not support providing effective user name</h8>
-            <br />
-            <h8>For more info, visit RLS link in the bottom of the page</h8>
-        </div>
-        <div id="RLSdiv" hidden="hidden">
-            <div class="inputLineTitle">User name</div>
-            <input type="text" name="username" value="@Model.Username" />
-            <h8>User name is always required for RLS.</h8>
-            <div class="inputLineTitle">Roles</div>
-            <input type="text" name="roles" value="@Model.Roles" />
-            <h8>Comma separeted roles, optional for SSAS, mandatory for roles defined in pbix</h8>
-            <br /><br />
-            <input type="submit" value="Reload" />
-            <br /><br />
-        </div>
-    }
-</div>
 <div id="reportContainer"></div>
-
-<div class="infoBox">
-    Code is in files:<br />
-    1) HomeController.cs<br />
-    2) EmbedReport.cshtml
-</div>
-
-@Html.Partial("LiveDemoLink")
-
 <script>
     // Read embed application token from Model
-    var accessToken = "@Model.EmbedToken.Token";
+    var accessToken = "@Model.EmbedTokenString";
 
     // Read embed URL from Model
     var embedUrl = "@Html.Raw(Model.EmbedUrl)";
